# chain-service-nobot

chain-frontend/: .env.template  .eslintrc.cjs  .gitignore  bun.lockb  index.html  package.json  tailwind.config.js
chain-frontend/src/: main.tsx  routeTree.gen.ts
chain-frontend/src/app/: App.tsx  globals.css  theme.ts
chain-service/: .env.template  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  start.sh
chain-service/chain_service/: app.py  logging.py  s3.py  settings.py
chain-service/chain_service/controllers/: __main__.py  chain.py  namespace.py  run_chain.py  s3.py
chain-service/chain_service/database/: database.py
chain-service/chain_service/database/models/: base.py  chain.py  namespace.py  progress_chain.py  running_chain.py  uploaded_file.py
chain-service/chain_service/dependencies/: audio_converter_service.py  chain_repository.py  database.py  file_uploader_service.py  namespace_repository.py  planfix_client.py  progress_action_service_factory.py  progress_chain_repository.py  progress_chain_runner_service.py  running_chain_repository.py  uploaded_file_repository.py
chain-service/chain_service/repositories/: chain.py  namespace.py  progress_chain.py  running_chain.py  uploaded_file.py
chain-service/chain_service/schema/: base.py  run_chain.py
chain-service/chain_service/services/: audio_converter.py  file_uploader.py  progress_chain_runner.py
chain-service/chain_service/services/progress_action/: base.py  comment_progress_action.py  factory.py  wait_progress_action.py
chain-service/chain_service/utils/: sync_to_async.py
(+35 files in other folders)
