[tool.poetry]
name = "chain-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/groups/82963914/-/packages/pypi/simple"
priority = "supplemental"

[tool.flake8]
exclude = ".venv"
max-line-length = 88

[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
motor = "^3.3.2"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
planfix-client = "^0.1.3"
python-multipart = "^0.0.9"
boto3 = "^1.34.59"
ffmpeg-python = "^0.2.0"
aiofiles = "^23.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
